tests/build/widget/name_conflict2.stderr
error[E0428]: the name `foo` is defined multiple times
 --> $DIR/name_conflict2.rs:6:1
  |
3 | #[widget($crate::foo)]
  | ---------------------- previous definition of the module `foo` here
...
6 | #[widget($crate::foo)]
  | ^^^^^^^^^^^^^^^^^^^^^^ `foo` redefined here
  |
  = note: `foo` must be defined only once in the type namespace of this module
  = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)
